samples/_failures_safe/1761004462_7d2bde_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7b1a9545.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
